--- a/Docs/1.00 - Entity Pools.md
+++ b/Docs/1.00 - Entity Pools.md
@@ -1,5 +1,11 @@
 ## Overview
-Entity Pools are semantically defined organizational structures for entities and their component data.  They are responsible for storing, managing, and manipulating all component data.  Entity Pools are generate unique internal infrastructure via Zig comptime, determined by their individual configuration, such as what component data the Entity Pool is allowed to store for entities, which component data entities are *required* to have, and how component data is stored within the pool
+Entity Pools are semantically defined organizational structures for entities and their component data.  They are responsible for storing, managing, and manipulating any and all component data within the Prescient Engine.  Using Zig's compile-time capabilities, Entity Pools generate unique internal infrastructure determined by the pools user defined configuration, such as what component data is allowed to be stored in a pool, which component data entities from a pool are required to have, and the storage strategy pools use to store their data.  
 
 ## Why Entity Pools? 
-Entity Pools offer a unique performance and development opportunities that other ECS engines do **NOT** have by taking advantage of Zig's compile time capabilities.  Entities and their component makeups encompass a near limitless range: NPCs, UI elements, sound effects, inventory slots, world decorations, essentially everything in a game or simulation with properties.  
+Generally, other ECS engines take a much more uniform approach to how entities and their component data get stored in memory, iterated in systems, and accessed by queries.  This uniform approach means NPCs, UI elements, sound effects, world decorations, and everything other category of entity gets stored together and treated the same by the engine despite these categories being significantly different in numerous ways.  Entity Pools do  not just provide a method to separate entities by category, but provides a method to separate entities in memory, and gives the developer tools to change how the engine itself handles different categories of entities.  
+
+# Performance Gains
+##### <u>Hybrid Storage Strategies</u>
+The most significant performance benefit of Entity Pools is their configurable storage strategy.  Other ECS engines have to decide between storage types: archetype or sparse-set. Archetype storage is proficient for enabling systems to iterate over many entities, but performance degrades when entities are destroyed often or changes in entities' component makeup occur frequently.  Sparse-set storage is the opposite: poor iteration speed, but adding and removing components from entities is trivial.  Entity types that are iterated over often and  have relatively stable component makeups like mobs, 
+##### <u></u>
+Entity pools provide another degree of cache locality by partitioning different categories of entities in memory.  Instead of all variations of all types of all entities being stored within the same global structure in memory, pools partition the entities they store 
