--- a/Docs/Architecture/1.a - PoolConfig.md
+++ b/Docs/Architecture/1.a - PoolConfig.md
@@ -4,7 +4,7 @@ Pool configuration defines the compile-time parameters that determine how an [[1
 This individualized approach enables both performance gains and enhanced type safety. Pools can be optimized for different access patterns, enforce component requirements at compile-time, and enable intelligent query routing—all without runtime overhead.  
 
 # How to Configure
-Pools are configured by passing a **PoolConfig** struct to the `EntityPool` function when creating pools in the [[1.02 - Pool Registry|Pool Registry]].
+Pools are configured by passing a **PoolConfig** struct to the `EntityPool` function when creating pools in the [[1.b - Pool Registry|Pool Registry]].
 
 >[!example] Inside The Struct
 >```zig
@@ -69,7 +69,7 @@ Determines whether the pool uses [[Archetype]] or [[Sparse-Set]] storage interna
 
 # See Also
 - [[1.00 - Entity Pools]] - Overview of Entity Pools
-- [[1.02 - Pool Registry]] - How pools are registered and managed
+- [[1.b - Pool Registry]] - How pools are registered and managed
 - [[Storage Strategy|Hybrid Storage Strategies]] - Detailed comparison of storage strategies
 - [[Archetype]] - Archetype storage implementation
 - [[Sparse-Set]] - Sparse-Set storage implementation  
