--- a/Docs/Architecture/1.00 - Entity Pools.md
+++ b/Docs/Architecture/1.00 - Entity Pools.md
@@ -6,6 +6,7 @@ Generally, other ECS engines take a much more uniform approach to how entities a
 
 # What Entity Pools Enable
 - **[[Storage Strategy|Hybrid Storage Strategies]]**:  Some categories of entities benefit from different storage optimizations. For example, particle systems with thousands of short-lived entities benefit from Sparse-Set storage for fast creation/destruction, while player characters with stable component sets benefit from Archetype storage for cache-optimized iteration. This enables a whole dimension of optimization potential unique to Prescient and is by far its greatest optimization.
+#todo Use different example than player character for archetype 
 
 - **[[Query Mapping]]**: Because each pool has compile-time knowledge of its components, queries can skip entire pools that don't contain the queried components. Traditional ECS implementations must check every archetype at runtime. Prescient queries only examine pools that could possibly match, reducing query overhead.
 
