--- a/Docs/Architecture/1.01 - Creating Entity Pools.md
+++ b/Docs/Architecture/1.01 - Creating Entity Pools.md
@@ -10,7 +10,7 @@ New [[1.00 - Entity Pools|Entity Pools]] can be added to the top of [[1.b - Pool
 >pub const GeneralPool = EntityPool(PoolConfig{
 >	.name = .GeneralPool,
 >	.components = general_components,
->	.storage_strategy = .sparse,
+>	.storage_strategy = .Sparse,
 >});
 >
 >//User added pool
@@ -21,13 +21,65 @@ New [[1.00 - Entity Pools|Entity Pools]] can be added to the top of [[1.b - Pool
 >		.Color
 >	},
 >	.req = &.{.Posistion,},
->	.storage_strategy = .sparse,
+>	.storage_strategy = .Sparse,
 >});
 >```
 
 # Good Pool Design 
-Before creating a brand new pool, it's important to understand how to design Entity Pools in ways maximize performance and developer experience.  Poor pool design can actually hinder performance.  Creating optimal pools can be summarized by three fundamental aspects: how Pools get defined, how they are used at runtime, and how they are configured.
+Before creating a brand new pool, it's important to understand how to design Entity Pools in ways maximize performance and developer experience.  Poor pool design can actually hinder performance.  Creating optimal pools depends mostly on how the boundaries of Pools get defined and choosing the right storage strategy.
+#### Defining Pool Boundaries
+How users define the boundaries of Entity Pools is key to making the most out of them.  It is highly recommenced that these boundaries are determined by entity category (entities with similar component makeup), and not by game state (main menu, level 1) or system/behavior (movement, combat).  Not only does this help improve cache locality by making sure entities that are likely to share systems are grouped together in pools, it also ensure that types of entities that would benefit from the same storage strategy share the same pools.  It should be noted that deciding how pools get defined is ultimately up to the developer.
 
-## Defining Pool Boundaries
-How the developer defines the boundaries of Entity Pools is key to making the most out of them.  There are many ways one can determine how pool boundaries get defined: "entity type" (player, mobs, particles, items, decor), by system (movement, combat, rotating, targeting), or by game state (main menu, level 1, level 2, pause menu). While having a hypothetical variety of choices in constructing Entity Pools would seem beneficial, there is only one way to truly capitalize one the Entity Pool's approach to organizing both component data and our own mental models.  
+>[!success] Proper Pool Boundaries
+>```zig
+>pub const enemyPool = EntityPool(.{
+>	.name = .enemyPool,
+>	.components = &.{ .Status, .Weapon, .Armor },
+>	.req = .&{ .Posistion, .Velocity, .Sprite },
+>	.storage_strategy = .archetype,
+>});
+>
+>pub const projectilePool = EntityPool(.{
+>	.name = .projectilePool,
+>	.components = &.{ .Lifetime, .Friction, .Weight },
+>	.req = .&{ .Posistion, .Velocity, .Size, .Color},
+>	.storage_strategy = .archetype,
+>});
+>
+>pub const uiElement = EntityPool(.{
+>	.name = .projectilePool,
+>	.components = &.{ .Lifetime, .Friction, .Weight },
+>	.req = .&{ .Posistion, .Velocity, .Dimension, .Color },
+>	.storage_strategy = .archetype,
+>});
+>```
+>Define pools by the category of entities they produce.
 
+>[!failure] Bad Pool Practice
+>```zig
+>//Defined by system / behavior for all entities that move
+>pub const movementPool = EntityPool(.{
+>	.name = .Movement,
+>	.components = &.{ .Posistion, .Velocity },
+>	.storage_strategy = .Archetype,
+>});
+>
+>//Defined by game state for all entities within a level
+>>pub const level1 = EntityPool(.{
+>	.name = .Level1,
+>	.components = &.{ .Posistion, .Velocity, .Sprite, AI, .Status,
+>	.storage_strategy = .Archetype,
+>});
+>```
+>In both examples, you have Entity Pools that contain entities with a wide variety of different categories and lead to very awkward development. 
+
+### Storage Strategy
+The storage strategy is represented by an enum value of `PoolRegistry.StorageStrategy` and determines how component data gets stored in memory and accessed by queries.  Choosing the correct storage strategy for an Entity Pool can have massive performance implications.  Giving the developers the option of choosing how they want to store their data allows Prescient to maintain peak performance in scenarios that other engines would fail or find compromise. 
+##### Sparse-Set Storage: 
+Sparse-Set storage does well when systems need to frequently create/destroy entities, and add/remove components.  This storage strategy can be thought of as the more flexible option, and does not do well when systems need to constantly iterate over entities due to the sparse-set method of storing data being cache-unfriendly.  Examples of entity types that benefit from this storage strategy are:
+- Inventory items
+- Particles
+- Status Effects
+- UI Elements
+##### Archetype Storage
+Archetype storage has the exact opposite trade-offs as sparse-set.  This storage strategy does well at frequently iterating many entities due to its cache-friendly nature.  The downside of archetype storage is that creating/destroying entities and adding/removing components are much more expensive operations.   Examples of entity types that benefit from this storage strategy 
