--- a/Docs/Architecture/1.a - PoolConfig.md
+++ b/Docs/Architecture/1.a - PoolConfig.md
@@ -35,11 +35,11 @@ Determines whether the pool uses [[Archetype]] or [[Sparse-Set]] storage interna
 >//PoolRegistry.zig
 >const particleConfig = .{
 >	.name = .particlePool,
->	.components = .&{
+>	.components = ComponentRegistry.Components{
 >		.Velocity,
 >		.Color,
 >	},
->	.req = .&{ 
+>	.req = ComponentRegistry.Components{ 
 >		.Position 
 >	},
 >	.storage_strategy = .Sparse,
@@ -49,7 +49,7 @@ Determines whether the pool uses [[Archetype]] or [[Sparse-Set]] storage interna
 >```
 >
 ># PoolConfig with Struct Literals
->Use Zig's struct literals for to configure pools more conveniently
+>Use Zig's struct literals for to pass component arguments and configure pools more conveniently!  
 >```zig
 >pub const enemyPool = EntityPool(.{
 >	.name = .PlayerPool,
