--- a/Docs/Architecture/1.01 - Creating Entity Pools.md
+++ b/Docs/Architecture/1.01 - Creating Entity Pools.md
@@ -1,5 +1,5 @@
-# Overview
-New [[1.00 - Entity Pools|Entity Pools]] can be added to the top of [[1.b - Pool Registry|Pool Registry]].  Pools must be made public in order to be registered correctly.  Prescient's build system will automatically update the registry once it is added to the file underneath the [[general pool]] which is the "default" pool in Prescient.  Developers can configure the pool by passing a [[1.a - PoolConfig|PoolConfig]] struct as the Entity Pool's parameter.
+# Getting Started
+New [[1.00 - Entity Pools|Entity Pools]] can be added to the top of [[1.05 - Pool Registry|Pool Registry]].  Pools must be made public in order to be registered correctly.  Prescient's build system will automatically update the registry once it is added to the file underneath the [[general pool]] which is the "default" pool in Prescient.  Developers can configure the pool by passing a [[1.02 - PoolConfig|PoolConfig]] struct as the Entity Pool's parameter.
 
 >[!example]
 >```zig
@@ -71,15 +71,13 @@ How users define the boundaries of Entity Pools is key to making the most out of
 >	.storage_strategy = .Archetype,
 >});
 >```
->In both examples, you have Entity Pools that contain entities with a wide variety of different categories and lead to very awkward development. 
+>In both examples, you have Entity Pools that contain entities with a wide variety of different categories and can cause poor performance and lead to an awkward development experience. 
 
 ### Storage Strategy
-The storage strategy is represented by an enum value of `PoolRegistry.StorageStrategy` and determines how component data gets stored in memory and accessed by queries.  Choosing the correct storage strategy for an Entity Pool can have massive performance implications.  Giving the developers the option of choosing how they want to store their data allows Prescient to maintain peak performance in scenarios that other engines would fail or find compromise. 
-##### Sparse-Set Storage: 
-Sparse-Set storage does well when systems need to frequently create/destroy entities, and add/remove components.  This storage strategy can be thought of as the more flexible option, and does not do well when systems need to constantly iterate over entities due to the sparse-set method of storing data being cache-unfriendly.  Examples of entity types that benefit from this storage strategy are:
-- Inventory items
-- Particles
-- Status Effects
-- UI Elements
-##### Archetype Storage
-Archetype storage has the exact opposite trade-offs as sparse-set.  This storage strategy does well at frequently iterating many entities due to its cache-friendly nature.  The downside of archetype storage is that creating/destroying entities and adding/removing components are much more expensive operations.   Examples of entity types that benefit from this storage strategy 
+Storage Strategy is represented by an enum value of `StorageStrategy` and determines how component data gets stored in memory and accessed by queries.  Choosing the correct storage strategy for an Entity Pool can have massive performance implications.  Giving the developers the option of choosing how they want to store their data allows Prescient to maintain peak performance in scenarios that other engines would fail or require compromise.  Users uncertain with which storage strategy to use should start with `Sparse` and learn more about when and why to use which storage strategy by reading the [[1.03 - Storage Strategy (Summary & Usage)|full doc]] once bottlenecks caused by entity pools occur.  
+# See Also
+
+
+
+
+
