--- a/Docs/Architecture/1.02 - PoolConfig.md
+++ b/Docs/Architecture/1.02 - PoolConfig.md
@@ -4,7 +4,7 @@ Pool configuration defines the compile-time parameters that determine how an [[1
 This individualized approach enables both performance gains and enhanced type safety. Pools can be optimized for different access patterns, enforce component requirements at compile-time, and enable intelligent query routing—all without runtime overhead.  
 
 # How to Configure
-Pools are configured by passing a **PoolConfig** struct to the `EntityPool` function when creating pools in the [[1.b - Pool Registry|Pool Registry]].
+Pools are configured by passing a **PoolConfig** struct to the `EntityPool` function when creating pools in the [[1.05 - Pool Registry|Pool Registry]].
 
 >[!example] Inside The Struct
 >```zig
@@ -12,7 +12,7 @@ Pools are configured by passing a **PoolConfig** struct to the `EntityPool` func
 >	name: PoolRegistry.PoolName,
 >	components: ComponentRegistry.ComponentName,
 >	req: ComponentRegistry.ComponentName = null,
->	storage_strategy: StorageStrategy, 
+>	storage_strategy: StorageStrategy, //Values: Archetype, Sparse
 >}
 >```
 
@@ -27,7 +27,7 @@ Defines which components entities in this pool *may* have. This shapes the pool'
 Defines which components entities *must* have upon creation and cannot remove. Defaults to null and is a completely optional field. Attempting to create entities without required components, or removing required components, results in compile-time errors.
 
 **`storage_strategy: PoolConfig.StorageStrategy`**
-Determines whether the pool uses [[Archetype]] or [[Sparse-Set]] storage internally.
+Determines whether the pool uses [[Archetype]] or [[Sparse-Set]] storage internally. 
 
 >[!example]
 ># Creating PoolConfig Struct
@@ -63,13 +63,13 @@ Determines whether the pool uses [[Archetype]] or [[Sparse-Set]] storage interna
 >		.Velocity,
 >		.Health
 >	},
->	.storage_strategy = .archetype,
+>	.storage_strategy = .Archetype,
 >});
 >``` 
 
 # See Also
 - [[1.00 - Entity Pools]] - Overview of Entity Pools
-- [[1.b - Pool Registry]] - How pools are registered and managed
-- [[Storage Strategy|Hybrid Storage Strategies]] - Detailed comparison of storage strategies
+- [[1.05 - Pool Registry]] - How pools are registered and managed
+- [[1.03 - Storage Strategy (Summary & Usage)|Hybrid Storage Strategies]] - Detailed comparison of storage strategies
 - [[Archetype]] - Archetype storage implementation
 - [[Sparse-Set]] - Sparse-Set storage implementation  
