--- a/Docs/Architecture/1.01 - Creating Entity Pools.md
+++ b/Docs/Architecture/1.01 - Creating Entity Pools.md
@@ -1,5 +1,5 @@
-# Getting Started
-New [[1.00 - Entity Pools|Entity Pools]] can be added to the top of [[1.05 - Pool Registry|Pool Registry]].  Pools must be made public in order to be registered correctly.  Prescient's build system will automatically update the registry once it is added to the file underneath the [[general pool]] which is the "default" pool in Prescient.  Developers can configure the pool by passing a [[1.02 - PoolConfig|PoolConfig]] struct as the Entity Pool's parameter.
+# Registering A New Pool
+New [[1.00 - Entity Pools|Entity Pools]] can be added to the top of [[1.15 - Pool Registry|Pool Registry]].  Pools must be made public in order to be registered correctly.  Prescient's build system will automatically update the registry once it is added to the file underneath the [[1.03 - General Pool|General Pool]] which is the "default" pool in Prescient.  Developers can configure the pool by passing a [[1.02 - PoolConfig|PoolConfig]] struct as the Entity Pool's parameter.
 
 >[!example]
 >```zig
@@ -25,8 +25,10 @@ New [[1.00 - Entity Pools|Entity Pools]] can be added to the top of [[1.05 - Poo
 >});
 >```
 
+Once the pool is properly added to the registry (as depicted above), Prescient's [[prebuild]] system will register the pool completely, and will be ready for use.
 # Good Pool Design 
-Before creating a brand new pool, it's important to understand how to design Entity Pools in ways maximize performance and developer experience.  Poor pool design can actually hinder performance.  Creating optimal pools depends mostly on how the boundaries of Pools get defined and choosing the right storage strategy.
+Before creating a brand new pool, it's important to understand how to design Entity Pools in ways maximize performance and developer experience.  Poor pool design can actually hinder performance.  Creating optimal pools depends mostly on how the boundaries of Pools get defined and choosing the right storage strategy.  
+
 #### Defining Pool Boundaries
 How users define the boundaries of Entity Pools is key to making the most out of them.  It is highly recommenced that these boundaries are determined by entity category (entities with similar component makeup), and not by game state (main menu, level 1) or system/behavior (movement, combat).  Not only does this help improve cache locality by making sure entities that are likely to share systems are grouped together in pools, it also ensure that types of entities that would benefit from the same storage strategy share the same pools.  It should be noted that deciding how pools get defined is ultimately up to the developer.
 
@@ -74,7 +76,7 @@ How users define the boundaries of Entity Pools is key to making the most out of
 >In both examples, you have Entity Pools that contain entities with a wide variety of different categories and can cause poor performance and lead to an awkward development experience. 
 
 ### Storage Strategy
-Storage Strategy is represented by an enum value of `StorageStrategy` and determines how component data gets stored in memory and accessed by queries.  Choosing the correct storage strategy for an Entity Pool can have massive performance implications.  Giving the developers the option of choosing how they want to store their data allows Prescient to maintain peak performance in scenarios that other engines would fail or require compromise.  Users uncertain with which storage strategy to use should start with `Sparse` and learn more about when and why to use which storage strategy by reading the [[1.03 - Storage Strategy (Summary & Usage)|full doc]] once bottlenecks caused by entity pools occur.  
+Storage Strategy is represented by an enum value of `StorageStrategy` and determines how component data gets stored in memory and accessed by queries.  Choosing the correct storage strategy for an Entity Pool can have massive performance implications.  Giving the developers the option of choosing how they want to store their data allows Prescient to maintain peak performance in scenarios that other engines would fail or require compromise.  Users uncertain with which storage strategy to use should start with `Sparse` and learn more about when and why to use which storage strategy by reading the [[1.04 - Storage Strategy (Summary & Usage)|full doc]] once bottlenecks caused by entity pools occur.  
 # See Also
 
 
