--- a/Docs/Architecture/0.00 - INDEX.md
+++ b/Docs/Architecture/0.00 - INDEX.md
@@ -2,5 +2,8 @@
 # [[1.00 - Entity Pools]]
 - [[1.01 - Creating Entity Pools]]
 - [[1.02 - PoolConfig]]
-- [[1.04 - Storage Strategy (Summary & Usage)]]
-- [[1.05 - Storage Strategy (Architecture)]]
+- [[1.03 - Using Pools]]
+- [[1.04 - General Pool]]
+- [[1.05- Storage Strategy (Summary & Usage)]]
+- [[1.06 - Storage Strategy (Architecture)]]
+- [[1.07 - Pool Registry]]
