--- a/Docs/Architecture/1.00 - Entity Pools.md
+++ b/Docs/Architecture/1.00 - Entity Pools.md
@@ -5,7 +5,7 @@ Entity Pools are semantically defined organizational structures for entities and
 Generally, other ECS engines take a much more uniform approach to how entities and their component data get stored in memory, iterated in systems, and accessed by queries.  This uniform approach means NPCs, UI elements, sound effects, world decorations, and every other category of entity gets stored together and managed in memory the same way, despite these categories being significantly different in numerous ways.  Entity Pools do not just provide a method to separate entities by category, they are a means to partition the entity data itself.  This fundamental shift in how entity data gets managed allows for a new range of optimizations and development advantages. 
 
 # What Entity Pools Enable
-- **[[1.04 - Storage Strategy (Summary & Usage)|Hybrid Storage Strategies]]**:  Some categories of entities benefit from different storage optimizations. For example, particle systems with thousands of short-lived entities benefit from Sparse-Set storage for fast creation/destruction, while entities with stable component sets like NPCs or projectiles benefit from Archetype storage for cache-optimized iteration. This enables a whole dimension of optimization potential unique to Prescient and is by far one of the engine's greatest assets.
+- **[[1.05- Storage Strategy (Summary & Usage)|Hybrid Storage Strategies]]**:  Some categories of entities benefit from different storage optimizations. For example, particle systems with thousands of short-lived entities benefit from Sparse-Set storage for fast creation/destruction, while entities with stable component sets like NPCs or projectiles benefit from Archetype storage for cache-optimized iteration. This enables a whole dimension of optimization potential unique to Prescient and is by far one of the engine's greatest assets.
 
 - **[[Query Mapping]]**: Because each pool has compile-time knowledge of its components, queries can skip entire pools that don't contain the queried components. Traditional ECS implementations must check every archetype at runtime. Prescient queries only examine pools that could possibly match, reducing query overhead.
 
@@ -15,6 +15,11 @@ Generally, other ECS engines take a much more uniform approach to how entities a
 
 - **Clearer Mental Model**:  Newcomers to ECS concepts and design often report one of the greatest challenges to learning the paradigm is shifting away from an Object Orientated mental model of data into a data-driven one.  Entity Pools mirror some aspects of Object Orientated engineering while staying true to their data orientated roots.  Entity Pools, like in OOP, define distinct boundaries around types of entities (objects), and which components (properties) and "instance" can have, while maintaining the fundemental ECS approach of adding and removing components, component data being stored in structs of arrays, and having systems iterate over entities instead of objects containing their methods.
 
-##### Next: [[1.01 - Creating Entity Pools|Creating Entity Pools]]
-
 # See Also
+- [[1.01 - Creating Entity Pools]] - How to register and configure new pools
+- [[1.02 - PoolConfig]] - Detailed pool configuration options
+- [[1.03 - Using Pools]] - Pool API and entity management
+- [[1.04 - General Pool]] - The default general-purpose pool
+- [[1.05- Storage Strategy (Summary & Usage)|Storage Strategy]] - Choosing between Archetype and Sparse-Set storage
+- [[Query Mapping]] - How queries leverage pool compile-time knowledge
+- [[Component Registry]] - Registering components for use in pools
