--- a/Docs/Architecture/1.01 - Creating Entity Pools.md
+++ b/Docs/Architecture/1.01 - Creating Entity Pools.md
@@ -1,8 +1,9 @@
 # Registering A New Pool
-New [[1.00 - Entity Pools|Entity Pools]] can be added to the top of [[1.15 - Pool Registry|Pool Registry]].  Pools must be made public in order to be registered correctly.  Prescient's build system will automatically update the registry once it is added to the file underneath the [[1.03 - General Pool|General Pool]] which is the "default" pool in Prescient.  Developers can configure the pool by passing a [[1.02 - PoolConfig|PoolConfig]] struct as the Entity Pool's parameter.
+New [[1.00 - Entity Pools|Entity Pools]] can be added to the top of [[1.07 - Pool Registry|Pool Registry]].  Pools must be made public in order to be registered correctly.  Prescient's build system will automatically update the registry once it is added to the file underneath the [[1.04 - General Pool|General Pool]] which is the "default" pool in Prescient.  Developers can configure the pool by passing a [[1.02 - PoolConfig|PoolConfig]] struct as the Entity Pool's parameter.
 
 >[!example]
 >```zig
+>// project/src/registries/PoolRegistry.zig
 >const EntityPool = @import("EntityPool.zig").EntityPoolType;
 >const PoolConfig = @import("PoolConfig.zig").PoolConfig;
 >
@@ -76,8 +77,15 @@ How users define the boundaries of Entity Pools is key to making the most out of
 >In both examples, you have Entity Pools that contain entities with a wide variety of different categories and can cause poor performance and lead to an awkward development experience. 
 
 ### Storage Strategy
-Storage Strategy is represented by an enum value of `StorageStrategy` and determines how component data gets stored in memory and accessed by queries.  Choosing the correct storage strategy for an Entity Pool can have massive performance implications.  Giving the developers the option of choosing how they want to store their data allows Prescient to maintain peak performance in scenarios that other engines would fail or require compromise.  Users uncertain with which storage strategy to use should start with `Sparse` and learn more about when and why to use which storage strategy by reading the [[1.04 - Storage Strategy (Summary & Usage)|full doc]] once bottlenecks caused by entity pools occur.  
+Storage Strategy is represented by an enum value of `StorageStrategy` and determines how component data gets stored in memory and accessed by queries.  Choosing the correct storage strategy for an Entity Pool can have massive performance implications.  Giving the developers the option of choosing how they want to store their data allows Prescient to maintain peak performance in scenarios that other engines would fail or require compromise.  Users uncertain with which storage strategy to use should start with `Sparse` and learn more about when and why to use which storage strategy by reading the [[1.05- Storage Strategy (Summary & Usage)|full doc]] once bottlenecks caused by entity pools occur.  
 # See Also
+- [[1.00 - Entity Pools]] - Overview of Entity Pools and their benefits
+- [[1.02 - PoolConfig]] - Complete PoolConfig struct reference
+- [[1.03 - Using Pools]] - Using pools to create and manage entities
+- [[1.04 - General Pool]] - The preconfigured default pool
+- [[1.05- Storage Strategy (Summary & Usage)|Storage Strategy]] - Detailed guide on choosing storage strategies
+- [[1.07 - Pool Registry]] - Pool registration system
+- [[Component Registry]] - Component registration and management
 
 
 
