--- a/Docs/Architecture/1.02 - PoolConfig.md
+++ b/Docs/Architecture/1.02 - PoolConfig.md
@@ -4,7 +4,7 @@ Pool configuration defines the compile-time parameters that determine how an [[1
 This individualized approach enables both performance gains and enhanced type safety. Pools can be optimized for different access patterns, enforce component requirements at compile-time, and enable intelligent query routing—all without runtime overhead.  
 
 # How to Configure
-Pools are configured by passing a **PoolConfig** struct to the `EntityPool` function when creating pools in the [[1.15 - Pool Registry|Pool Registry]].
+Pools are configured by passing a **PoolConfig** struct to the `EntityPool` function when creating pools in the [[1.07 - Pool Registry|Pool Registry]].
 
 >[!example] Inside The Struct
 >```zig
@@ -69,7 +69,10 @@ Determines whether the pool uses [[Archetype]] or [[Sparse-Set]] storage interna
 
 # See Also
 - [[1.00 - Entity Pools]] - Overview of Entity Pools
-- [[1.15 - Pool Registry]] - How pools are registered and managed
-- [[1.04 - Storage Strategy (Summary & Usage)|Hybrid Storage Strategies]] - Detailed comparison of storage strategies
+- [[1.01 - Creating Entity Pools]] - Pool registration and design best practices
+- [[1.03 - Using Pools]] - Using configured pools to manage entities
+- [[1.07 - Pool Registry]] - How pools are registered and managed
+- [[1.05- Storage Strategy (Summary & Usage)|Storage Strategies]] - Detailed comparison of storage strategies
 - [[Archetype]] - Archetype storage implementation
-- [[Sparse-Set]] - Sparse-Set storage implementation  
+- [[Sparse-Set]] - Sparse-Set storage implementation
+- [[Component Registry]] - Component registration system  
