--- a/Docs/Architecture/1.05- Storage Strategy (Summary & Usage).md
+++ b/Docs/Architecture/1.05- Storage Strategy (Summary & Usage).md
@@ -19,7 +19,7 @@ Archetype storage has the exact opposite trade-offs as sparse-set.  This storage
 >It may not be obvious which storage strategy to use.  Use the profiler to asses bottlenecks and test which storage strategy work best for each entity pool.  Thanks to Zig's comp-time, the only action required changing storage strategies is to change the `storage_strategy` of a pool's PoolConfig and to recompile!
 
 # How To Use
-You can select which storage strategy you want to use when defining entity pools within the [[1.15 - Pool Registry|Pool Registry]] within the [[1.02 - PoolConfig|PoolConfig]] struct.  Pass a `StorageStrategy.StorageStrategy` enum in the `storage_strategy` argument of PoolConfig.  Values of `StorageStrategy` are Sparse and Archetype. 
+You can select which storage strategy you want to use when defining entity pools within the [[1.07 - Pool Registry|Pool Registry]] within the [[1.02 - PoolConfig|PoolConfig]] struct.  Pass a `StorageStrategy.StorageStrategy` enum in the `storage_strategy` argument of PoolConfig.  Values of `StorageStrategy` are Sparse and Archetype. 
 
 ```zig
 pub const enemyPool = EntityPool(.{
@@ -38,5 +38,11 @@ pub const enemyPool = EntityPool(.{
 });
 ``` 
 
-##### Next:  [[1.05 - Storage Strategy (Architecture)|Storage Strategy (Architecture)]]
+##### Next:  [[1.06 - Storage Strategy (Architecture)|Storage Strategy (Architecture)]]
 # See Also
+- [[1.00 - Entity Pools]] - How storage strategies fit into Entity Pools
+- [[1.01 - Creating Entity Pools]] - Pool design best practices
+- [[1.02 - PoolConfig]] - Configuring storage strategy in PoolConfig
+- [[1.06 - Storage Strategy (Architecture)]] - Deep dive into storage strategy implementation
+- [[Archetype]] - Archetype storage internals
+- [[Sparse-Set]] - Sparse-Set storage internals
